Fixed image spacing... a lot

--- a/themes/FoundationPress/src/assets/scss/modules/_front-page.scss
+++ b/themes/FoundationPress/src/assets/scss/modules/_front-page.scss
@@ -135,6 +135,9 @@
   .orbit-container {
     height: auto;
   }
+  .mascot-container {
+    max-height: 250px;
+  }
 }
 .orbit-mobile {
   width: 100%;
@@ -222,6 +225,15 @@
 
 // Media queries begin
 
+// Breakpoint for Tablet
+
+@media screen and (min-width: 768px) {
+  .orbit {
+    .mascot-container {
+      max-height: 350px;
+    }
+  }
+}
 // Breakpoint for desktop
 @media screen and (min-width: $large) {
   .build-quote {
@@ -238,8 +250,7 @@
       flex-direction: row;
       .our-process-image {
         height: 18rem;
-        margin-left: -3.5rem;
-        padding-left: 3.5rem;
+        // margin: 0 1rem 0 1rem;
         width: auto;
       }
       .our-process-head {
@@ -256,6 +267,8 @@
         width: 33.3%;
       }
       .build {
+        margin-left: 2rem;
+        margin-right: 2rem;
         padding-bottom: 2rem;
         width: 33.3%;
       }
@@ -288,6 +301,14 @@
     display: block;
     .orbit-container {
       height: auto;
+    }
+  }
+  .mascot-orbit {
+    // max-width: 1400px;
+  }
+  .orbit {
+    .mascot-container {
+      max-height: 450px;
     }
   }
   .brand-slides-desktop {
